fixed compsci projects page to work only on mobile

--- a/styles.css
+++ b/styles.css
@@ -163,9 +163,87 @@ h2 {
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
+.project-topics {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+}
 
 .project-sections {
+    margin: 40px 40px;
+    width: 800px;
+    height: 300px;
+    border-radius: 20px;
+    border: solid;
+    border-color: rgb(78, 78, 78);
+    text-align: center;
+
+}
+.compsci {
+    background-image: url("images/compsci-background.png");
+}
+
+.engineering {
+    background-image: url("images/engineering-background.png");
+    background-size: 820px;
+    background-position: center;
+    background-position-y: -5px;
+    background-repeat: no-repeat;
+    background-color: white;
+}
+
+.project-link {
+    text-decoration: none;
+    background-color: rgba(0, 0, 0, 0);
+    color: white;
+    font-size: 75px;
+    position: relative;
+    top: 100px;
+    right: 0px;
+}
+.project-link:hover {
     color: rgb(255, 239, 149);
+    text-decoration: underline;
+    text-underline-offset: 15px;
+    text-decoration-thickness: 2px;
+}
+
+/* ---------------------------------------------------------------------------------------------------- */
+
+h1 {
+    color: rgb(255, 232, 104);
+    letter-spacing: 2px;
+    margin-bottom: 25px;
+    margin-left: 70px;
+    font-weight: lighter;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 40px;
+}
+
+
+li {
+    color: rgb(255, 251, 228);
+    font-size: 20px;
+    letter-spacing: 2px;
+    line-height: 35px;
+    font-weight: 100;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    margin-top: 20px;
+    margin-left: 80px;
+}
+
+.main-content {
+    margin-top: 100px;
+}
+
+a {
+    text-decoration: none;
+    color: rgba(255, 217, 0, 0.75);
+}
+
+.plink:hover {
+    text-decoration: underline;
 }
 
 /* ---------------------------------------------------------------------------------------------------- */
